# CS-Map

./: 404.html  CsMap.mak  CsMap.nmk  Makefile.am  OpenSource.sln  ReadMe.txt  index.html  mkdocs.yml  sitemap.xml
CsMapConsoleUtilities/: ConsoleUtilities.mak  CsMapConsoleUtilities.vcproj
CsMapConsoleUtilities/Include/: csAscFixer.hpp  csConsoleUtilities.hpp  csUsefulRangeReport.hpp  csUtilitiesSupport.hpp
CsMapConsoleUtilities/Source/: csAdd2007and2011.cpp  csAddEpsgData.cpp  csAscFixer.cpp  csConsoleUtilities.cpp  csCrsNamesToSource.cpp  csCsMapToCsv.cpp  csCsdToCsv.cpp  csEpsg706Update.cpp  csGenerate48Hpgn.cpp  csGenerateBlueBookTestData.cpp  csIprmRegressionTestFile.cpp  (+6 more)
Data/: AngularUnitKeyNameMap.csv  DatumKeyNameMap.csv  EllipsoidKeyNameMap.csv  EpsgCodeListGeographic.csv  Geographic3DKeyNameMap.csv  GeographicKeyNameMap.csv  LinearUnitKeyNameMap.csv  MAPINFOW.PRJ  ParameterKeyNameMap.csv  ProjectionKeyNameMap.csv  ProjectiveKeyNameMap.csv
Dictionaries/: CS-MAP.GID  CS-MAP.HLP  CS_COMP.c  CS_Comp.c  CS_DictDiff.c  Ch1903ToPlus.gdc  Compiler.mak  Compiler.nmk  Compiler.vcproj  GeodeticPath.asc  GeodeticTransformation.asc  Nad27ToCsrs.gdc  Nad27ToNad83.gdc  Nad83ToHarn.gdc  NameMapper.csv  OSGM91.TXT  Rgf93ToNtf.gdc  category.asc  coordsys.asc  cs-map.cnt  datums.asc  elipsoid.asc  mreg.asc
Include/: Header.vba  csCsvFileSupport.hpp  csIoUtil.hpp  csNameMapper.hpp  csNameMapperSupport.h  cs_CsvFileSupport.hpp  cs_EpsgStuff.h  cs_Frnch.h  cs_Geocon.h  cs_Geodetic.h  cs_NTv2.h  cs_Nadcon.h  cs_NameMapper.hpp  cs_NameMapperSupport.h  cs_map.h  cs_mapDll.h  cs_mfc.h  cs_wkt.h  csepsgstuff.h
Source/: CS_GeoidHeight.c  CS_VertconUS.c  CS_agd66.c  CS_agd84.c  CS_angle.c  CS_ansi.c  CS_ats77.c  CS_ats77New.c  CS_ats77Transform.c  CS_azmea.c  CS_azmed.c  CS_badekas.c  CS_bonne.c  CS_bpcnc.c  CS_bursa.c  CS_bynFile.c  CS_caDatum.c  CS_caV1GridFile.c  CS_caV2GridFile.c  CS_category.c  CS_csini.c  CS_csio.c  CS_csprm.c  CS_csrs.c  CS_csvFileSupport.cpp  CS_datum.c  CS_defCmp.c  CS_defCmpEx.c  CS_dhdn.c  CS_dtAgd66ToGda94.c  CS_dtAgd84ToGda94.c  CS_dtAts77ToNad83.c  CS_dtDhdnToEtrf89.c  CS_dtEd50ToEtrf89.c  CS_dtNad27ToAts77.c  CS_dtNad27ToNad83.c  CS_dtNad83ToHarn.c  CS_dtNzdg49ToNzgd2K.c  CS_dtTokyoToJgd2k.c  CS_dtcalc.c  (+127 more)
Test/: CS_test.c  CStest1.c  CStest2.c  CStest3.c  CStest4.c  CStest5.c  CStest6.c  CStest7.c  CStest8.c  CStest9.c  CStestA.c  CStestB.c  CStestC.c  CStestD.c  CStestE.c  CStestF.c  CStestG.c  CStestH.c  CStestI.c  CStestJ.c  CStestK.c  CStestL.c  CStestS.c  CStestSupport.c  ConsoleTest.vcproj  Test.mak  Test.nmk  cs_Test.h  lcl.lnt  mfcTest.cpp  mfcTest.h
TestCpp/: ConsoleTestCpp.vcproj  TestCpp.mak  TestCpp.nmk
VC100/: Compiler.vcxproj  Compiler.vcxproj.filters  ConsoleTest.vcxproj  ConsoleTestCpp.vcxproj  ConsoleTestCpp.vcxproj.filters  CsMapConsoleUtilities.vcxproj  CsMapConsoleUtilities.vcxproj.filters  CsMapDll.vcxproj  CsMapDll.vcxproj.filters  Library.vcxproj  Library.vcxproj.filters  OpenSource.sln
VC110/: Compiler.vcxproj  Compiler.vcxproj.filters  ConsoleTest.vcxproj  ConsoleTestCpp.vcxproj  ConsoleTestCpp.vcxproj.filters  CsMapConsoleUtilities.vcxproj  CsMapConsoleUtilities.vcxproj.filters  CsMapDll.def  CsMapDll.vcxproj  Library.vcxproj  Library.vcxproj.filters  OpenSource.sln
VC120/: Compiler.vcxproj  Compiler.vcxproj.filters  ConsoleTestCpp.vcxproj  ConsoleTestCpp.vcxproj.filters  CsMapConsoleUtilities.vcxproj  CsMapConsoleUtilities.vcxproj.filters  Library.vcxproj  OpenSource.sln
VC140/: ConsoleTestCpp.vcxproj  CsMapConsoleUtilities.vcxproj  CsMapConsoleUtilities.vcxproj.filters  OpenSource.sln
VC90/: Compiler.vcproj  ConsoleTest.vcproj  ConsoleTestCpp.vcproj  CsMapConsoleUtilities.vcproj  CsMapDll.def  CsMapDll.vcproj  DllReadMe.txt  Library.vcproj  OpenSource.sln
db/: uuid
docs/: index.md  license.md
installation/: index.html
license/: index.html
mkdocs/: search_index.json
(+49 files in other folders)
